[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
[project]
name = "wn-editor"
dynamic = ['version']
description = "An editor for wordnets, extending the popular 'wn' package."
authors = [
    {name = "Jannes Müller",email ="jannes@mlrjs.de"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"

keywords = ["wn","wordnet","editor"]

[dependencies]
wn = "0.9.1"
[project.urls]
homepage = "https://github.com/Hypercookie/wn-editor"
documentation = "https://github.com/Hypercookie/wn-editor"
[tool.flit.module]
name = "wn_editor"