[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
[project]
name = "wn-editor"
dynamic = ['version']
authors = [
    {email ="jannes@mlrjs.de"}
]
description = "An editor for wordnets, extending the popular 'wn' package."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic"
]
author = "Jannes Müller"
author-email = "jannes@mlrjs.de"
keywords = ["wn", "wordnet", "editor"]
[dependencies]
wn = "0.9.1"
[project.urls]
homepage = "https://github.com/Hypercookie/wn-editor"
documentation = "https://github.com/Hypercookie/wn-editor"
[tool.flit.module]
name = "wn_editor"